# map_ugly_tools

./: CMakeLists.txt  README.md  package.xml
msg/: DeleteRectObstacle.msg
resource/: .map.yaml.swp  map.pgm  unoki_2f.yaml
scripts/: .analyse_map.py.swp  add_obstacle.py  delete_obstacle_within_rect.py  down_sample_map.py
